welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: not found: value int
  int max;
  ^max1020:5: error: not found: value max
  return max
         ^