welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  int max;
  Math.max(a,b)  
  Math.min(a,b)
  return max
}